--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
 // version 4
 @import 'variables';
 @import '../node_modules/bootstrap/scss/bootstrap';
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
