Passage à ng-bootstrap et mise en place du menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,28 +3,27 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
+      <li class="nav-item" [class.active]="this.router.url.startsWith('/dashboard')">
+        <a class="nav-link" routerLink="/dashboard">Dashboard</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Recherche</a>
+        <a class="nav-link" [class.active]="this.router.url.startsWith('/search')" routerLink="/search">Recherche</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Admin</a>
+      <li class="nav-item" [class.active]="this.router.url.startsWith('/admin')" ngbDropdown>
+        <a ngbDropdownToggle class="nav-link dropdown-toggle" [class.disabled]="this.admin.disabled" 
+        routerLink="/admin">Admin</a>
+        <div class="dropdown-menu">
+        <li><a class="dropdown-item" routerLink="/admin/batch">batch</a></li>
+      </div>
       </li>
     </ul>
-    <div class="btn-group" dropdown>
-      <button dropdownToggle type="button" class="btn btn-primary dropdown-toggle">
-        Button dropdown <span class="caret"></span>
+    <div class="btn-group" ngbDropdown>
+      <button ngbDropdownToggle type="button" class="btn btn-secondary dropdown-toggle">
+        User (username) <span class="caret"></span>
       </button>
-      <ul *dropdownMenu class="dropdown-menu" role="menu">
-        <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
-        <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
-        <li class="divider dropdown-divider"></li>
-        <li role="menuitem"><a class="dropdown-item" href="#">Separated link</a>
-        </li>
-      </ul>
+      <div class="dropdown-menu">
+        <li><a class="dropdown-item" routerLink="logout">Logout</a></li>
+      </div>
     </div>
   </div>
 </nav>
