--- a/src/app/admin/batch/batch.component.html
+++ b/src/app/admin/batch/batch.component.html
@@ -1,3 +1,14 @@
-<p>
-  batch works!
+<h1>Batch Jobs</h1>
+<p class="index-page--subtitle"> This section lists all
+  available batch jobs deployed with this instance of Spring Batch Admin.
 </p>
+<div id="batch-jobs" class="tab-pane active col-md-12">
+  <table ng-table="tableParams" class="table">
+    <tr *ngFor="let job of this.jobs">
+      <td data-title="'Name'" class="text-center">{{job.name}}</td>
+      <td data-title="'Execution Count'" class="text-center">{{job.executionCount}}</td>
+      <td data-title="'Launchable'" class="text-center">{{job.launchable}}</td>
+      <td data-title="'Incrementable'" class="text-center">{{job.incrementable}}</td>
+    </tr>
+  </table>
+</div>
