Passage à angular 4.3, proxy sur les service reste esb-console, ajout du spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<spinner [backgroundColor]="'#ff0000'"></spinner>
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
   <div class="navbar-brand">EsbConsole</div>
 
