--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<spinner [backgroundColor]="'#ff0000'"></spinner>
+<!--<spinner [backgroundColor]="'#ff0000'"></spinner>-->
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
   <div class="navbar-brand">EsbConsole</div>
 
